--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Start of Userlove Code Snippet -->
 <script>
-  var queue = []; function userloveq(method, args) { (!!userloveMethods && userloveMethods[method]) ? userloveMethods[method](args) : queue.push({ method: method, args: args }); } (function (l, o, v, e) { l["a_id"] = e; l["dm"] = l.location.hostname; l[v] = l[v] || []; if (l[o]) return; l[o] = {}; var s = document.createElement("script"); s.async = true; s.src = "https://cdn.userlove.dev/wrapper.dev.js?v=" + Date.now(); var t = document.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); })(window, "userloveMethods", "userloveDL", "9ZYI41M5V3")
+  var queue = []; function userloveq(method, args) { (!!userloveMethods && userloveMethods[method]) ? userloveMethods[method](args) : queue.push({ method: method, args: args }); } (function (l, o, v, e) { l["a_id"] = e; l["dm"] = l.location.hostname; l[v] = l[v] || []; if (l[o]) return; l[o] = {}; var s = document.createElement("script"); s.async = true; s.src = "https://cdn.userlove.dev/wrapper.dev.js?v=" + Date.now(); var t = document.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); })(window, "userloveMethods", "userloveDL", "E9CVUTCT0L")
 </script>
 <!-- End of Userlove Code Snippet -->
   <meta charset="utf-8" />
