--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-<!-- Start of Userlove Code Snippet -->
-<script>
-    var userloveq = []; function userlove(method, args) { (!!userloveMethods && userloveMethods[method]) ? userloveMethods[method](args) : userloveq.push({ method: method, args: args }); } (function (l, o, v, e) { if (l["a_id"]) { return; } l["a_id"] = e; l["dm"] = l.location.hostname; l[v] = l[v] || []; l[o] = {}; var s = document.createElement("script"); s.async = true; s.src = "https://cdn.userlove.io/wrapper.dev.js?v=" + Date.now(); var t = document.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); })(window, "userloveMethods", "userloveDL", "4ZHFVL8VB6")
+<script type="text/javascript">
+    (function(w,d,u){
+        w.$productFruits = w.$productFruits || [];
+        w.productFruits=w.productFruits||{ };w.productFruits.scrV='2';
+        let a=d.getElementsByTagName('head')[0];let r=d.createElement('script');r.async=1;r.src=u;a.appendChild(r);
+    })(window,document,'https://app.productfruits.com/static/script.js');
 </script>
-<!-- End of Userlove Code Snippet -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
