--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,35 @@
 
 <head>
     <!-- Start of Userlove Code Snippet -->
-<script>
-    var userloveq = []; function userlove(method, args) { (!!userloveMethods && userloveMethods[method]) ? userloveMethods[method](args) : userloveq.push({ method: method, args: args }); } (function (l, o, v, e) { if (l["a_id"]) { return; } l["a_id"] = e; l["dm"] = l.location.hostname; l[v] = l[v] || []; l[o] = {}; var s = document.createElement("script"); s.async = true; s.src = "https://cdn.userlove.io/wrapper.dev.js?v=" + Date.now(); var t = document.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); })(window, "userloveMethods", "userloveDL", "WUSE2DDFJ2")
+<script type="text/javascript">
+  window.AppcuesSettings = { enableURLDetection: true };
 </script>
+<script src="//fast.appcues.com/215179.js">
+</script>
+    <script>
+        window.Appcues.identify("12343424", // unique, required
+  {
+
+    // recommended (optional) properties
+
+    createdAt: 1566932390, // Unix timestamp of user signup date
+    purchasedAt: 1566932395, // Unix timestamp of account purchase date (leave null if empty)
+    planTier: "Standard", // Current user’s plan tier
+    role: "Admin", // Current user’s role or permissions
+    accountId: "1234", // Current user's account ID
+    firstName: "John", // current user's first name
+
+    // additional suggestions
+
+    companyName: "Acme Corp", // Current user’s company name
+    email: "john.doe@example.com", // Current user's email
+    location: "90210", // a zipcode, state, or country enables location-based targeting
+    version: "2.0", // users on different versions may need to see different content
+    language: "spanish", // for multi-language applications
+    renewalDate: 1577880288 // to remind users to renew
+  }
+);
+    </script>
 <!-- End of Userlove Code Snippet -->
 <!-- <script type="text/javascript">
     (function(w,d,u){
