--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
-    <!-- Start of Userlove Code Snippet -->
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQPWBR1V70"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQPWBR1V70');
+</script>
 <script type="text/javascript">
   window.AppcuesSettings = { enableURLDetection: true };
 </script>
