--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,15 @@
 
   gtag('config', 'G-MQPWBR1V70');
 </script>
-<script type="text/javascript">
-  window.AppcuesSettings = { enableURLDetection: true };
+/* chameleon.io script */
+<script>
+!function(d,w){var t="SMulIsDXiXnGxP6H4hXWG4b8vafBNCJccrxoa5gmsBEY3-1O4gCg-DJ8bIgFcVEqteXFm",c="chmln",i=d.createElement("script");if(w[c]||(w[c]={}),!w[c].root){w[c].accountToken=t,w[c].location=w.location.href.toString(),w[c].now=new Date,w[c].fastUrl='https://fast.chameleon.io/';var m="identify alias track clear set show on off custom help _data".split(" ");for(var s=0;s<m.length;s++){!function(){var t=w[c][m[s]+"_a"]=[];w[c][m[s]]=function(){t.push(arguments);};}();}i.src=w[c].fastUrl+"messo/"+t+"/messo.min.js",i.async=!0,d.head.appendChild(i);}}(document,window);
 </script>
-<script src="//fast.appcues.com/215179.js">
-</script>
-    <script>
-        window.Appcues.identify("12343424", // unique, required
-  {
+  /* Chameleon - Identify Users. See chameleon.io */
 
-    // recommended (optional) properties
-
-    createdAt: 1566932390, // Unix timestamp of user signup date
-    purchasedAt: 1566932395, // Unix timestamp of account purchase date (leave null if empty)
-    planTier: "Standard", // Current user’s plan tier
-    role: "Admin", // Current user’s role or permissions
-    accountId: "1234", // Current user's account ID
-    firstName: "John", // current user's first name
-
-    // additional suggestions
-
-    companyName: "Acme Corp", // Current user’s company name
-    email: "john.doe@example.com", // Current user's email
-    location: "90210", // a zipcode, state, or country enables location-based targeting
-    version: "2.0", // users on different versions may need to see different content
-    language: "spanish", // for multi-language applications
-    renewalDate: 1577880288 // to remind users to renew
-  }
-);
-    </script>
+// IMPORTANT: Replace USER.ID_IN_DB, USER.EMAIL, USER.FULL_NAME below with your app's actual variable names.
+chmln.identify('1212121', { name:"Ankita Katyal"     // REQUIRED, the unique ID of each user in your database (e.g. 23443 or "690b80e5f433ea81b96c9bf6")
+});
 <!-- End of Userlove Code Snippet -->
 <!-- <script type="text/javascript">
     (function(w,d,u){
