--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,11 @@
 !function(d,w){var t="SMulIsDXiXnGxP6H4hXWG4b8vafBNCJccrxoa5gmsBEY3-1O4gCg-DJ8bIgFcVEqteXFm",c="chmln",i=d.createElement("script");if(w[c]||(w[c]={}),!w[c].root){w[c].accountToken=t,w[c].location=w.location.href.toString(),w[c].now=new Date,w[c].fastUrl='https://fast.chameleon.io/';var m="identify alias track clear set show on off custom help _data".split(" ");for(var s=0;s<m.length;s++){!function(){var t=w[c][m[s]+"_a"]=[];w[c][m[s]]=function(){t.push(arguments);};}();}i.src=w[c].fastUrl+"messo/"+t+"/messo.min.js",i.async=!0,d.head.appendChild(i);}}(document,window);
 </script>
   /* Chameleon - Identify Users. See chameleon.io */
-
+<script>
 // IMPORTANT: Replace USER.ID_IN_DB, USER.EMAIL, USER.FULL_NAME below with your app's actual variable names.
 chmln.identify('1212121', { name:"Ankita Katyal"     // REQUIRED, the unique ID of each user in your database (e.g. 23443 or "690b80e5f433ea81b96c9bf6")
 });
+</script>
 <!-- End of Userlove Code Snippet -->
 <!-- <script type="text/javascript">
     (function(w,d,u){
