--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,14 @@
 <html lang="en">
 
 <head>
-<script>
-!function(d,w){var t="SMulIsDXiXnGxP6H4hXWG4b8vafBNCJccrxoa5gmsBEY3-1O4gCg-DJ8bIgFcVEqteXFm",c="chmln",i=d.createElement("script");if(w[c]||(w[c]={}),!w[c].root){w[c].accountToken=t,w[c].location=w.location.href.toString(),w[c].now=new Date,w[c].fastUrl='https://fast.chameleon.io/';var m="identify alias track clear set show on off custom help _data".split(" ");for(var s=0;s<m.length;s++){!function(){var t=w[c][m[s]+"_a"]=[];w[c][m[s]]=function(){t.push(arguments);};}();}i.src=w[c].fastUrl+"messo/"+t+"/messo.min.js",i.async=!0,d.head.appendChild(i);}}(document,window);
-</script>
-<script>
-// IMPORTANT: Replace USER.ID_IN_DB, USER.EMAIL, USER.FULL_NAME below with your app's actual variable names.
-chmln.identify('1212121', { name:"Ankita Katyal"     // REQUIRED, the unique ID of each user in your database (e.g. 23443 or "690b80e5f433ea81b96c9bf6")
-});
-</script>
-<!-- End of Userlove Code Snippet -->
-<!-- <script type="text/javascript">
+    <script type="text/javascript">
     (function(w,d,u){
         w.$productFruits = w.$productFruits || [];
         w.productFruits=w.productFruits||{ };w.productFruits.scrV='2';
         let a=d.getElementsByTagName('head')[0];let r=d.createElement('script');r.async=1;r.src=u;a.appendChild(r);
     })(window,document,'https://app.productfruits.com/static/script.js');
-</script> -->
-<!--     <script type="text/javascript">
+</script>
+    <script type="text/javascript">
         const idGenerator = (length) => {
   var chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZ".split("");
 
@@ -32,13 +23,8 @@ chmln.identify('1212121', { name:"Ankita Katyal"     // REQUIRED, the unique ID 
   }
   return str;
 };
-    /*
-    * Call this when you have all user information available in your code.
-    * DO NOT forget to replace the username placeholder with the username of the logged-in user.
-    * Check out our docs for more options.
-    */
-    $productFruits.push(['init', 'canbcgSVgKScpGtm', 'en', { username: idGenerator(10) }]);
-</script> -->
+    $productFruits.push(['init', 'pAvpzil8WfxEKJau', 'en', { username: idGenerator(12) }]);
+</script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
